test/libsolidity/syntaxTests/arrayLength/inline_array.sol
contract C {
    uint[[2]] a15;
}
// ----
// TypeError: (22-25): Invalid array length, expected integer literal or constant expression.
